--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
 	    <h2>Word-recognition study</h2>
 	    <h3>Hello,</h3>
 
-		<p>this study looks at shape resemblance between letters of the Latin alphabet. First, you will be given a simple questionnaire about your background. Afterward, you will be presented with a sequence of letter triplets. The triplets use the same letters in various combinations. For each triplet, you will be asked to quickly pick the most different letter (the odd one out). Completing the study should not take more than seven minutes. All responses are recorded at the very end. <strong>For that reason, do not use Back or Reload browser buttons during the study.</strong></p>
+		<p>(instructions) Completing the study should not take more than seven minutes. All responses are recorded at the very end. <strong>For that reason, do not use Back or Reload browser buttons during the study.</strong></p>
 
-		<p>You have to be 18 years or older to participate. By returning the results, you are giving your consent for the information you provide to be used in my research. All data will remain anonymous. At the end of the questionnaire, you can enter your email if you wish to learn about the results of the study. This is optional.</p>
-
-		<p>This project has been reviewed by the Research Ethics Committee of the University of Reading and has been given a favourable ethical opinion for conduct.</p>
+		<p>You have to be 18 years or older to participate. By returning the results, you are giving your consent for the information you provide to be used in our research. All data will remain anonymous.</p>
 
 		<input type="button" name="next" class="next button" value="Start">
 
