A few minor tweaks

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 		<p>You have to be 18 years or older to participate. By returning the results, you are giving your consent for the responses you provide to be used in our research. All data will remain anonymous.</p>
 
-		<input type="button" name="next" class="next button" value="Start">
+		<input type="button" name="next" class="next button single" value="Start">
 
 		<p class="gray">This project has been reviewed by the University Research Ethics Committee and has been given a favourable ethical opinion for conduct. If you wish to know more about the research or have a query about this study, please contact:<br><br>
 		Mary Dyson, David Březina<br>
@@ -67,7 +67,7 @@
 			<option value="Other designer">I am another kind of designer</option>
 		</select>
 
-	    <input type="button" name="next" class="next button" value="Next">
+	    <input type="button" name="next" class="next button single" value="Next">
 	</fieldset>
 
 	<!-- Practice -->
@@ -75,7 +75,7 @@
 	<fieldset id="practice" class="text">
 		<h2>Practice</h2>
 		<p>You will start with a few practice trials to familiarize yourself with the first part. Try to do this part as quickly and accurately as possible.</p>
-		<input type="button" name="next" class="next button float" value="Start">
+		<input type="button" name="next" class="next button single float" value="Start">
 	</fieldset>
 
 	<!-- 1. Test lexical task-->
@@ -83,7 +83,7 @@
 	<fieldset id="test_1_lexical" class="text">
 		<h2>Practice finished</h2>
 		<p>You have now finished the practice and start the first sequence of tasks.</p>
-		<input type="button" name="next" class="next button float" value="Start">
+		<input type="button" name="next" class="next button single float" value="Start">
 	</fieldset>
 
 	<!-- 1. Test self-evaluation -->
@@ -110,10 +110,10 @@
 		</select>
 
 		In the following sequence you will be presented with words and non-words
-		and this time you are asked whether these appeared in the previous set.
+		and this time you are asked <strong>whether these appeared in the previous set</strong>.
 		You can take as much time as you like to respond in this part.
 
-	    <input type="button" name="next" class="next button" value="Next">
+	    <input type="button" name="next" class="next button single" value="Next">
 	</fieldset>
 
 	<!-- 2. Test lexical task-->
@@ -121,7 +121,7 @@
 	<fieldset id="test_2_lexical" class="text">
 		<h2>Start the second test</h2>
 		<p>You have now finished the first sequence of tasks and start the second sequence, doing the same tasks.</p>
-		<input type="button" name="next" class="next button float" value="Start">
+		<input type="button" name="next" class="next button single float" value="Start">
 	</fieldset>
 
 	<!-- 2. Test self-evaluation -->
@@ -148,10 +148,10 @@
 		</select>
 
 		In the following sequence you will be presented with words and non-words
-		and this time you are asked whether these appeared in the previous set.
+		and this time you are asked <strong>whether these appeared in the previous set</strong>.
 		You can take as much time as you like to respond in this part.
 
-	    <input type="button" name="next" class="next button" value="Next">
+	    <input type="button" name="next" class="next button single" value="Next">
 	</fieldset>
 
 
