--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
     <title>Word-recognition study</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.js'></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.js"></script>
 	
 	<script type="text/javascript">
       window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var r=t.forceSSL||"https:"===document.location.protocol,a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=(r?"https:":"http:")+"//cdn.heapanalytics.com/js/heap-"+e+".js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["addEventProperties","addUserProperties","clearEventProperties","identify","removeEventProperty","setEventProperties","track","unsetEventProperty"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])};
@@ -27,7 +27,7 @@
 
 	    <ol>
 	    	<li>You will be presented with strings of letters and asked whether the letters are a word or a non-word and to indicate how certain you are by selecting one of 4 buttons:<br>
-	    		<em>sure word / probably word / probably non-word / sure word</em>.<br>
+	    		<em>sure word / probably word / probably non-word / sure non-word</em>.<br>
 	    	You should try to do this as quickly and accurately as possible.</li>
 	    	<li>You will again be presented with words and non-words and this time you are asked whether these appeared in the previous set and how certain you are:<br>
 	    		<em>sure seen / probably seen / probably not seen / sure not seen</em>.<br>
@@ -90,13 +90,13 @@
 
 	<fieldset id="test_1_evaluation" class="text validate">
 		<h2>What do you think?</h2>
-	    <h3>Please answer these two questions before we continue with the next part.</h3>
+	    <h3>Please answer these two questions before you continue with the next part.</h3>
 
 		<strong>In your opinion, how well do you think you can remember the words and non-words from the previous sequence? (move the slider based on your estimate)</strong>
 
 		<div class="slider">
-			<span>I do not remember much</span><span class="right">I can remember everything</span>
-			<input id="test_1_remember" class="slider__range" type="range" value="50" min="0" max="99" step="1" required>
+			<span>I do not remember anything (0)</span><span class="slider_value">Value: 50</span><span class="right">I can remember everything (100)</span>
+			<input id="test_1_remember" class="rangeslider" type="range" value="50" min="0" max="100" step="1" required>
 		</div>
 
 		<strong>How legible was this typeface?</strong>
@@ -128,13 +128,13 @@
 
 	<fieldset id="test_2_evaluation" class="text validate">
 		<h2>What do you think?</h2>
-	    <h3>Please answer these two questions before we continue with the next part.</h3>
+	    <h3>Please answer these two questions before you continue with the next part.</h3>
 
 		<strong>In your opinion, how well do you think you can remember the words and non-words from the previous sequence? (move the slider based on your estimate)</strong>
 
 		<div class="slider">
-			<span>I do remember much</span><span class="right">I can remember everything</span>
-			<input id="test_2_remember" class="slider__range" type="range" value="50" min="0" max="99" step="1" required>
+			<span>I do not remember anything (0)</span><span class="slider_value">Value: 50</span><span class="right">I can remember everything (100)</span>
+			<input id="test_2_remember" class="rangeslider" type="range" value="50" min="0" max="100" step="1" required>
 		</div>
 
 		<strong>How legible was this typeface?</strong>
