--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	    <p>This study looks at word recognition in two parts:</p>
 
 	    <ol>
-	    	<li>You will be presented with strings of letters and asked whether the letters are a word or a non-word and to indicate how certain you are by selecting one of 4 buttons:<br>
+	    	<li>You will be presented with strings of letters and asked whether the letters are an English word or a non-word and to indicate how certain you are by selecting one of 4 buttons:<br>
 	    		<em>sure word / probably word / probably non-word / sure non-word</em>.<br>
 	    	You should try to do this as quickly and accurately as possible.</li>
 	    	<li>You will again be presented with words and non-words and this time you are asked whether these appeared in the previous set and how certain you are:<br>
