Adopted a new scale for design skills

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 	    <select id="id_design_skills" name="Design skills" required>
 			<option value="" selected="selected">---------</option>
 			<option value="Non-designer">I am not a designer</option>
+			<option value="Graphic designer">I am a graphic designer</option>
+			<option value="Typographer">I am a typographer</option>
 			<option value="Letter designer">I am designing letters (type, calligraphy, lettering)</option>
 			<option value="Other designer">I am another kind of designer</option>
 		</select>
