--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 	    <h2>Word recognition study</h2>
 	    <h3>Hello,</h3>
 
-	    <p>This study looks at word recognition in two parts:</p>
+	    <p>Thank you for your interest in our study which is a research project undertaken by Mary Dyson and David Březina at the University of Reading.  The aim of the study is to investigate the effect of different typefaces on word recognition and memory.</p>
+
+	    <h3><strong>Your task </strong></h3>
+
+	    <p>There are two parts:</p>
 
 	    <ol>
 	    	<li>You will be presented with strings of letters and asked whether the letters are an English word or a non-word and to indicate how certain you are by selecting one of 4 buttons:<br>
@@ -36,11 +40,20 @@
 
 	    <p>In between the two parts you will be asked to make two judgments about what you did in part 1. This sequence of tasks will be repeated and completing the study should take you about 5-10 minutes. All responses are recorded at the very end. <strong>For that reason, do not use Back or Reload browser buttons during the study.</strong></p>
 
-		<p>You have to be 18 years or older to participate. By returning the results, you are giving your consent for the responses you provide to be used in our research. All data will remain anonymous.</p>
+		<h3 class="gray"><strong>Statement of consent</strong></h3>
+
+		<p class="gray">This project has been reviewed by the University of Reading Research Ethics Committee and has been given a favourable ethical opinion for conduct. You have to be 18 years or older to participate. All data will remain anonymous.</p>
+
+		<p class="gray">By participating in the study and returning your answers you are confirming that:</p>
+		<ol class="gray">
+			<li>You are 18 years or older</li>
+			<li>You have read the above information</li>
+			<li>You give your consent for the responses you provide to be used in our research.</li>
+		</ol>
 
 		<input type="button" name="next" class="next button single" value="Start">
 
-		<p class="gray">This project has been reviewed by the University Research Ethics Committee and has been given a favourable ethical opinion for conduct. If you wish to know more about the research or have a query about this study, please contact:<br><br>
+		<p class="gray">If you wish to know more about the research or have a query about this study, please contact:<br><br>
 		Mary Dyson, David Březina<br>
 		University of Reading<br>
 		Department of Typography &amp; Graphic Communication<br>
