Changed layout of the introduction

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <form id="msform" accept-charset="UTF-8" action="https://www.getform.org/f/8b8cc5e7-ab5c-4685-9858-4c91f82d2393" method="POST">
 
-	<fieldset id="introduction" class="text">
+	<fieldset id="introduction" class="text intro">
 	    <h2>Word recognition study</h2>
 	    <h3>Hello,</h3>
 
@@ -40,18 +40,18 @@
 
 	    <p>In between the two parts you will be asked to make two judgments about what you did in part 1. This sequence of tasks will be repeated and completing the study should take you about 5-10 minutes. All responses are recorded at the very end. <strong>For that reason, do not use Back or Reload browser buttons during the study.</strong></p>
 
-		<h3 class="gray"><strong>Statement of consent</strong></h3>
+		<h3><strong>Statement of consent</strong></h3>
 
-		<p class="gray">This project has been reviewed by the University of Reading Research Ethics Committee and has been given a favourable ethical opinion for conduct. You have to be 18 years or older to participate. All data will remain anonymous.</p>
+		<p>This project has been reviewed by the University of Reading Research Ethics Committee and has been given a favourable ethical opinion for conduct. You have to be 18 years or older to participate. All data will remain anonymous.</p>
 
-		<p class="gray">By participating in the study and returning your answers you are confirming that:</p>
-		<ol class="gray">
+		<p>By participating in the study and returning your answers you are confirming that:</p>
+		<ol>
 			<li>You are 18 years or older</li>
 			<li>You have read the above information</li>
 			<li>You give your consent for the responses you provide to be used in our research.</li>
 		</ol>
 
-		<input type="button" name="next" class="next button single" value="Start">
+		<p><input type="button" name="next" class="next button single" value="Start"></p>
 
 		<p class="gray">If you wish to know more about the research or have a query about this study, please contact:<br><br>
 		Mary Dyson, David Březina<br>
