--- a/index.html
+++ b/index.html
@@ -25,30 +25,27 @@
 
 	    <p>Thank you for your interest in our study which is a research project undertaken by Mary Dyson and David Březina at the University of Reading.  The aim of the study is to investigate the effect of different typefaces on word recognition and memory.</p>
 
-	    <h3><strong>Your task </strong></h3>
+	    <h3>Your task </h3>
 
 	    <p>There are two parts:</p>
 
 	    <ol>
-	    	<li>You will be presented with strings of letters and asked whether the letters are an English word or a non-word and to indicate how certain you are by selecting one of 4 buttons:<br>
-	    		<em>sure word / probably word / probably non-word / sure non-word</em>.<br>
+	    	<li>You will be presented with strings of letters and asked whether the letters are an English word or a non-word and to indicate how certain you are by selecting one of 4 buttons: <em>sure word / probably word / probably non-word / sure non-word</em>.<br>
 	    	You should try to do this as quickly and accurately as possible.</li>
 	    	<li>You will again be presented with words and non-words and this time you are asked whether these appeared in the previous set and how certain you are:<br>
 	    		<em>sure seen / probably seen / probably not seen / sure not seen</em>.<br>
 	    	You can take as much time as you like to respond in this part.</li>
 	    </ol>
 
-	    <p>In between the two parts you will be asked to make two judgments about what you did in part 1. This sequence of tasks will be repeated and completing the study should take you about 5-10 minutes. All responses are recorded at the very end. <strong>For that reason, do not use Back or Reload browser buttons during the study.</strong></p>
+	    <p>In between the two parts you will be asked to make two judgments about what you did in part 1. This sequence of tasks will be repeated and completing the study should take you about 5-10 minutes. All responses are recorded at the very end. <strong class="red">For that reason, do not use Back or Reload browser buttons during the study.</strong></p>
 
-		<h3><strong>Statement of consent</strong></h3>
+		<h3>Statement of consent</h3>
 
-		<p>This project has been reviewed by the University of Reading Research Ethics Committee and has been given a favourable ethical opinion for conduct. You have to be 18 years or older to participate. All data will remain anonymous.</p>
-
-		<p>By participating in the study and returning your answers you are confirming that:</p>
+		<p>This project has been reviewed by the University of Reading Research Ethics Committee and has been given a favourable ethical opinion for conduct. You have to be 18 years or older to participate. All data will remain anonymous. <strong>By participating in the study and returning your answers you are confirming that:</strong></p>
 		<ol>
-			<li>You are 18 years or older</li>
-			<li>You have read the above information</li>
-			<li>You give your consent for the responses you provide to be used in our research.</li>
+			<li><strong>You are 18 years or older.</strong></li>
+			<li><strong>You have read the above information.</strong></li>
+			<li><strong>You give your consent for the responses you provide to be used in our research.</strong></li>
 		</ol>
 
 		<p><input type="button" name="next" class="next button single" value="Start"></p>
