--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	    	<li>You will be presented with strings of letters and asked whether the letters are an English word or a non-word and to indicate how certain you are by selecting one of 4 buttons: <em>sure word / probably word / probably non-word / sure non-word</em>.<br>
 	    	You should try to do this as quickly and accurately as possible.</li>
 	    	<li>You will again be presented with words and non-words and this time you are asked whether these appeared in the previous set and how certain you are:<br>
-	    		<em>sure seen / probably seen / probably not seen / sure not seen</em>.<br>
+	    	<em>sure seen / probably seen / probably not seen / sure not seen</em>.<br>
 	    	You can take as much time as you like to respond in this part.</li>
 	    </ol>
 
@@ -41,8 +41,11 @@
 
 		<h3>Statement of consent</h3>
 
-		<p>This project has been reviewed by the University of Reading Research Ethics Committee and has been given a favourable ethical opinion for conduct. You have to be 18 years or older to participate. All data will remain anonymous. <strong>By participating in the study and returning your answers you are confirming that:</strong></p>
-		<ol>
+		<p>This project has been reviewed by the University of Reading Research Ethics Committee and has been given a favourable ethical opinion for conduct. You have to be 18 years or older to participate. All data will remain anonymous.</p>
+
+		<p><strong>By participating in the study and returning your answers you are confirming that:</strong></p>
+
+		<ol class="tight">
 			<li><strong>You are 18 years or older.</strong></li>
 			<li><strong>You have read the above information.</strong></li>
 			<li><strong>You give your consent for the responses you provide to be used in our research.</strong></li>
