Fixed a bug with Start button not working

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<li><strong>You give your consent for the responses you provide to be used in our research.</strong></li>
 		</ol>
 
-		<p><input type="button" name="next" class="next button single" value="Start"></p>
+		<input type="button" name="next" class="next button single" value="Start">
 
 		<p class="gray">If you wish to know more about the research or have a query about this study, please contact:<br><br>
 		Mary Dyson, David Březina<br>
