--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		
 	<fieldset id="questionnaire" class="validate">
 	    <h2>Questionnaire</h2>
-	    <h3>Please answer the following questions.</h3>
+	    <p>Please answer the following questions.</p>
 
 	    <strong>Would you consider yourself a native English speaker?</strong>
 	    <select id="id_fluent" name="Fluent" required>
@@ -97,7 +97,7 @@
 
 	<fieldset id="test_1_lexical" class="text">
 		<h2>Practice finished</h2>
-		<p>You have now finished the practice and start the first sequence of tasks.</p>
+		<p>You have now finished the practice and start the first sequence of tasks.</p>
 		<input type="button" name="next" class="next button single float" value="Start">
 	</fieldset>
 
@@ -105,7 +105,7 @@
 
 	<fieldset id="test_1_evaluation" class="text validate">
 		<h2>What do you think?</h2>
-	    <h3>Please answer these two questions before you continue with the next part.</h3>
+	    <p>Please answer these two questions before you continue with the next part.</p>
 
 		<strong>In your opinion, how well do you think you can remember the words and non-words from the previous sequence? (move the slider based on your estimate)</strong>
 
@@ -143,7 +143,7 @@
 
 	<fieldset id="test_2_evaluation" class="text validate">
 		<h2>What do you think?</h2>
-	    <h3>Please answer these two questions before you continue with the next part.</h3>
+	    <p>Please answer these two questions before you continue with the next part.</p>
 
 		<strong>In your opinion, how well do you think you can remember the words and non-words from the previous sequence? (move the slider based on your estimate)</strong>
 
