--- a/thankyou.html
+++ b/thankyou.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-    <title>Letter resemblance study</title>
+    <title>Word-recognition study</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.js'></script>
