--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 	    <h2>Questionnaire</h2>
 	    <p>Please answer the following questions.</p>
 
-	    <strong>Would you consider yourself a native English speaker?</strong>
-	    <select id="id_native" name="Native" required>
+	    <strong>Would you consider yourself a fluent English speaker?</strong>
+	    <select id="id_fluent" name="Fluent" required>
 			<option value="" selected="selected">---------</option>
 			<option value="yes">yes</option>
 			<option value="no">no</option>
