--- a/thankyou.html
+++ b/thankyou.html
@@ -20,6 +20,7 @@
 <fieldset class="text">
     <h2>Finished</h2>
     <p>Your submission has been saved. Thank you for participating!</p>
+    <p>If you want to learn about the results of this study, the best option is to follow <a href="https://twitter.com/rosettatype">Rosetta Type on Twitter</a> or send an email to <a href="mailto:m.c.dyson@reading.ac.uk">Mary Dyson</a>.</p>
 </fieldset>
 
 </form>
