Rephrasing one question in the evaluation form

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			<input id="test_1_remember" class="rangeslider" type="range" value="50" min="0" max="100" step="1" required>
 		</div>
 
-		<strong>How legible was this typeface?</strong>
+		<strong>How legible was the typeface (font) in this sequence?</strong>
 		<select id="test_1_legibility" name="test_1_legibility" required>
 			<option value="" selected="selected">---------</option>
 			<option value="very easy to read">Very easy to read</option>
@@ -152,7 +152,7 @@
 			<input id="test_2_remember" class="rangeslider" type="range" value="50" min="0" max="100" step="1" required>
 		</div>
 
-		<strong>How legible was this typeface?</strong>
+		<strong>How legible was the typeface (font) in this sequence?</strong>
 		<select id="test_2_legibility" name="test_2_legibility" required>
 			<option value="" selected="selected">---------</option>
 			<option value="very easy to read">Very easy to read</option>
